// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test component: documentView should render correctly '<DocumentView />' when policy content is loaded. 1`] = `
<section
  class="makeStyles-section-1"
>
  <div
    class="MuiContainer-root makeStyles-container-2 MuiContainer-maxWidthLg"
  >
    <span
      class="MuiTypography-root makeStyles-common-5 makeStyles-paragraph-11 MuiTypography-body1"
    >
      <div>
        <p>
          Policy text
        </p>
      </div>
    </span>
  </div>
</section>
`;

exports[`test component: documentView should render correctly '<DocumentView />' when showcase content is loaded. 1`] = `
<section
  class="makeStyles-section-34"
>
  <div
    class="MuiContainer-root makeStyles-container-35 MuiContainer-maxWidthLg"
  >
    <span
      class="MuiTypography-root makeStyles-common-38 makeStyles-paragraph-44 MuiTypography-body1"
    >
      <div>
        <p>
          Showcase text
        </p>
      </div>
    </span>
  </div>
</section>
`;

exports[`test component: documentView should render correctly '<DocumentView />' when story content is loaded. 1`] = `
<section
  class="makeStyles-section-23"
>
  <div
    class="MuiContainer-root makeStyles-container-24 MuiContainer-maxWidthLg"
  >
    <span
      class="MuiTypography-root makeStyles-common-27 makeStyles-paragraph-33 MuiTypography-body1"
    >
      <div>
        <p>
          Story text
        </p>
      </div>
    </span>
  </div>
</section>
`;

exports[`test component: documentView should render correctly '<DocumentView />' when terms content is loaded. 1`] = `
<section
  class="makeStyles-section-12"
>
  <div
    class="MuiContainer-root makeStyles-container-13 MuiContainer-maxWidthLg"
  >
    <span
      class="MuiTypography-root makeStyles-common-16 makeStyles-paragraph-22 MuiTypography-body1"
    >
      <div>
        <p>
          Terms text
        </p>
      </div>
    </span>
  </div>
</section>
`;
